--- a/style.css
+++ b/style.css
@@ -52,47 +52,28 @@ body {
         animation-duration: 2.3s;
         animation-timing-function: ease-in-out;
         animation-delay: 1.2s; }
-  body .drone-wrapper-2 {
-    margin: auto;
-    width: 960px;
-    height: 703px;
-    position: relative; }
-    body .drone-wrapper-2 .image-wrap {
-      position: absolute;
-      height: 100%;
-      width: 100%; }
-      body .drone-wrapper-2 .image-wrap.front::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-image: url("img/drone_1.png");
-        background-size: cover;
-        width: 100%;
-        animation-name: fade-out;
-        animation-duration: 3s;
-        animation-timing-function: ease-in-out;
-        animation-delay: 1s; }
-      body .drone-wrapper-2 .image-wrap.middle::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-image: url("img/drone_2.png");
-        background-size: cover;
-        width: 100%;
-        animation-name: fade-out;
-        animation-duration: 2.8s;
-        animation-timing-function: ease-in-out;
-        animation-delay: 1.2s; }
   body img {
     width: 100%; }
+  body .cross-section {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #0042AC;
+    clip-path: circle(0px at 450px 350px);
+    -webkit-clip-path: circle(0px at 450px 350px);
+    transition: clip-path 300ms linear, -webkit-clip-path 300ms linear; }
+    body .cross-section .inner {
+      clip-path: circle(0px at 450px 350px);
+      -webkit-clip-path: circle(0px at 450px 350px);
+      background-repeat: no-repeat;
+      background-image: url("img/drone_4.png");
+      background-size: cover;
+      transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+      z-index: 9999;
+      width: 100%;
+      height: 100%; }
   body .sprinkles {
     position: absolute;
     width: 100%;
@@ -116,12 +97,14 @@ body {
         opacity: 0.0;
         top: -4px;
         left: -4px;
-        position: absolute; }
+        position: absolute;
+        pointer-events: none; }
       body .sprinkles .sprinkle .inner {
         background: #dd7832;
         width: 12px;
         height: 12px;
-        border-radius: 50%; }
+        border-radius: 50%;
+        pointer-events: none; }
     body .sprinkles .sprinkle-1 {
       left: 258px;
       top: 317px;
@@ -190,11 +173,14 @@ body {
     opacity: 1; } }
 @keyframes clip-shrink {
   0% {
-    clip-path: inset(0 0 0 0); }
+    clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0 0 0); }
   50% {
-    clip-path: inset(0 100% 0 0); }
+    clip-path: inset(0 100% 0 0);
+    -webkit-clip-path: inset(0 100% 0 0); }
   100% {
-    clip-path: inset(0 0 0 0); } }
+    clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0 0 0); } }
 @keyframes sprinkle {
   from {
     opacity: 0; }
