--- a/style.scss
+++ b/style.scss
@@ -68,60 +68,32 @@ body {
 
    }
 
-  .drone-wrapper-2 {
-    margin: auto;
-    width: 960px;
-    height: 703px;
-    position: relative;
-
-    .image-wrap {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-
-      &.front {
-        &::before {
-          content: '';
-          position: absolute;
-          top: 0;
-          right: 0;
-          height: 100%;
-          width: 100%;
-          background-repeat: no-repeat;
-          background-image: url('img/drone_1.png');
-          background-size: cover;
-          width: 100%;
-          animation-name: fade-out;
-          animation-duration: 3s;
-          animation-timing-function: ease-in-out;
-          animation-delay: 1s;
-        }
-      }
-
-      &.middle {
-        &::before {
-          content: '';
-          position: absolute;
-          top: 0;
-          right: 0;
-          height: 100%;
-          width: 100%;
-          background-repeat: no-repeat;
-          background-image: url('img/drone_2.png');
-          background-size: cover;
-          width: 100%;
-          animation-name: fade-out;
-          animation-duration: 2.8s;
-          animation-timing-function: ease-in-out;
-          animation-delay: 1.2s;
-        }
-      }
-    }
-
-   }
-
   img {
     width: 100%;
+  }
+
+  .cross-section {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #0042AC;
+    clip-path: circle(0px at 450px 350px);
+    -webkit-clip-path: circle(0px at 450px 350px);
+    transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+
+    .inner {
+      clip-path: circle(0px at 450px 350px);
+      -webkit-clip-path: circle(0px at 450px 350px);
+      background-repeat: no-repeat;
+      background-image: url('img/drone_4.png');
+      background-size: cover;
+      transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+      z-index: 9999;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .sprinkles {
@@ -150,6 +122,7 @@ body {
           top: -4px;
           left: -4px;
           position: absolute;
+					pointer-events: none;
       }
 
       .inner {
@@ -157,6 +130,7 @@ body {
         width: 12px;
         height: 12px;
         border-radius: 50%;
+			  pointer-events: none;
       }
     }
 
@@ -276,12 +250,15 @@ body {
 @keyframes clip-shrink {
   0% {
     clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0 0 0);
   }
   50% {
     clip-path: inset(0 100% 0 0);
+    -webkit-clip-path: inset(0 100% 0 0);
   }
   100% {
     clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0 0 0);
   }
 }
 
