--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
   body img {
     width: 100%; }
   body .cross-section {
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
@@ -63,14 +64,14 @@ body {
     background: #0042AC;
     clip-path: circle(0px at 450px 350px);
     -webkit-clip-path: circle(0px at 450px 350px);
-    transition: clip-path 300ms linear, -webkit-clip-path 300ms linear; }
+    transition: clip-path 300ms ease-in-out, -webkit-clip-path 300ms ease-in-out; }
     body .cross-section .inner {
       clip-path: circle(0px at 450px 350px);
       -webkit-clip-path: circle(0px at 450px 350px);
       background-repeat: no-repeat;
       background-image: url("img/drone_4.png");
       background-size: cover;
-      transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+      transition: clip-path 300ms ease-in-out, -webkit-clip-path 300ms ease-in-out;
       z-index: 9999;
       width: 100%;
       height: 100%; }
@@ -153,6 +154,24 @@ body {
       animation-delay: 4.4s; }
       body .sprinkles .sprinkle-8 .pulse-ring {
         animation-delay: 4.4s; }
+  body .info-connector {
+    width: 2px;
+    background: #0042AC;
+    position: absolute;
+    bottom: 0;
+    transition: all 300ms ease-in-out;
+    max-height: 0; }
+    body .info-connector.active {
+      max-height: 100%; }
+  body .drone-info {
+    width: 80%;
+    height: 740px;
+    border: 2px solid #0042AC;
+    margin: auto;
+    opacity: 0;
+    transition: opacity 300ms ease-in-out; }
+    body .drone-info.active {
+      opacity: 1; }
 
 @keyframes fade-out {
   0% {
