--- a/style.scss
+++ b/style.scss
@@ -65,7 +65,6 @@ body {
         }
       }
     }
-
    }
 
   img {
@@ -73,6 +72,7 @@ body {
   }
 
   .cross-section {
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
@@ -81,7 +81,7 @@ body {
     background: #0042AC;
     clip-path: circle(0px at 450px 350px);
     -webkit-clip-path: circle(0px at 450px 350px);
-    transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+    transition: clip-path 300ms ease-in-out, -webkit-clip-path 300ms ease-in-out;
 
     .inner {
       clip-path: circle(0px at 450px 350px);
@@ -89,7 +89,7 @@ body {
       background-repeat: no-repeat;
       background-image: url('img/drone_4.png');
       background-size: cover;
-      transition: clip-path 300ms linear, -webkit-clip-path 300ms linear;
+      transition: clip-path 300ms ease-in-out, -webkit-clip-path 300ms ease-in-out;
       z-index: 9999;
       width: 100%;
       height: 100%;
@@ -212,6 +212,32 @@ body {
       .pulse-ring {
         animation-delay: 4.4s;
       }
+    }
+  }
+
+  .info-connector {
+    width: 2px;
+    background: #0042AC;
+    position: absolute;
+    bottom: 0;
+    transition: all 300ms ease-in-out;
+    max-height: 0;
+
+    &.active {
+      max-height: 100%;
+    }
+  }
+
+  .drone-info {
+    width: 80%;
+    height: 740px;
+    border: 2px solid #0042AC;
+    margin: auto;
+    opacity: 0;
+    transition: opacity 300ms ease-in-out;
+
+    &.active {
+      opacity: 1;
     }
   }
 }
